2016-08-05  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/__init__.py: Added wrapper to run ARTS jobs.

	Implemented function run_arts() to run ARTS jobs in a pythonic way.

2016-08-04  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/em.py: Various small bugfixes

2016-07-21  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/cm.rst: Added example plot for vorticity colormap.

	* doc/pyplots/plot_vorticity.py: Create example for vorticity colormap.

	Plotting test data to give an example for the vorticity colormap.

	* doc/pyplots/plot_velocity.py: Fixed docstring.

2016-07-20  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/cm.rst: Added example plot for velocity colormap.

	* doc/pyplots/plot_velocity.py: Create example for velocity colormap.

	Plotting the meridional wind to give an example for the velocity colormap.

2016-07-15  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/utils/__init__.py: Added safe_eval

	Added safe_eval function, from where it is somewhat safe to pass eval
	code from a not entirely trusted source.  Supports numbers and basic
	expressions.

	* typhon/datasets/tovs.py: Added classes related to HIRS and IASI

	Added a hierarchy of classes for reading HIRS and IASI data.  This
	module has a soft dependency on pint.

	* typhon/datasets/_tovs_defs.py: Definitions needed by tovs module.

	* doc/datasets.rst: Add tovs module (but not _tovs_defs).

2016-07-15  Oliver Lemke  <olemke@core-dump.info>

	* typhon/physics/__init__.py: s/unit/units/ in __all__.

2016-07-15  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/__init__.py: Added package

	* typhon/physics/constants.py: Added module with physical constants.

	* typhon/physics/units.py: Added module handling units.

	Note that this module has a soft dependency on the `pint` units
	library.  Any module importing physics.units will also have this
	dependency.  If you do not want your code to depend on the `pint`
	units library, do not import `physics.units` or any of its